<resources>
    <string name="app_name">quiz_json</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Setting</string>
    <string name="action_history">History</string>
    <string name="score">Score:-</string>
    <string name="total_question">Total Question:-</string>
    <string name="percentage">Percentage:-</string>
    <string name="subject">Subject</string>
    <string name="Range">Range</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Login">Login</string>
    <string name="Login_id">Login Id:-</string>
    <string name="login_details">Please Enter your Email id:-</string>
    <string name="password">Password:-</string>
    <string name="password_details">Please Enter Your Password</string>
    <string name="Submit">Submit</string>
    <string name="Signuptxt">New User !! :)</string>
    <string name="Signup">SignUp</string>
    <string name="logintxt">Existing User !! :)</string>
    <string name="zero">0</string>
    <string name="startQuize">Start Quize</string>
</resources>