<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textColor="#FAFAFA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/signup"
        android:scaleType="fitCenter"
        app:layout_anchor="@+id/imageView2"
        app:layout_anchorGravity="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/sheet"
        android:layout_height="450dp"
        android:textColor="#FAFAFA"
        android:fontFamily="@font/alex1"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/roundpage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#FAFAFA"
        android:layout_marginLeft="150dp"
        android:fontFamily="@font/alex1"
        android:text="@string/Signup"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FAFAFA"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="#FAFAFA"
            android:fontFamily="@font/alex1"
            android:layout_marginTop="100dp"
            android:text="@string/Login_id"
            android:textSize="25dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAFAFA"
            android:id="@+id/EditSignup"
            android:textSize="20dp"
            android:layout_marginTop="100dp"
            android:hint="@string/login_details"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAFAFA"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/alex1"
            android:text="@string/password"
            android:textSize="25dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditpasswordSignup"
            android:textColor="#FAFAFA"
            android:textSize="20dp"
            android:fontFamily="@font/alex1"
            android:layout_marginTop="180dp"
            android:hint="@string/password_details"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="150dp"
        android:textColor="#FAFAFA"
        android:fontFamily="@font/alex1"
        android:text="@string/Submit"
        android:id="@+id/signupbtn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:textColor="#FAFAFA"
        android:fontFamily="@font/alex1"
        android:text="@string/logintxt"
        android:id="@+id/logintxt"
        android:layout_marginLeft="150dp"
        android:textSize="20dp"/>


</FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>