<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreCard">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="349dp"
        android:src="@drawable/trophy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="35dp"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="120dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:text="@string/zero"
        android:textSize="35dp"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="250dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_question"
        android:textSize="35dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_question"
        android:text="@string/zero"
        android:textSize="35dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="300dp"/>

</FrameLayout>