<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alex1"
            android:text="@string/score"
            android:textSize="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alex1"
            android:textSize="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="0dp"
            android:text="0"
            android:id="@+id/score"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alex1"
            android:text="@string/total_question"
            android:textSize="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/alex1"
            android:layout_marginLeft="0dp"
            android:text="0"
            android:id="@+id/questionAttpt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alex1"
            android:text="@string/percentage"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/alex1"
            android:layout_marginLeft="0dp"
            android:text="0"
            android:id="@+id/percent"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>